# builder

./: LICENSE  README.md
.github/: dependabot.yaml
METADATA-2025_06_18/: ghcr_io_pkgforge_go_88250_stable_88250-aarch64-Linux.json  ghcr_io_pkgforge_go_88250_stable_88250-loongarch64-Linux.json  ghcr_io_pkgforge_go_88250_stable_88250-riscv64-Linux.json  ghcr_io_pkgforge_go_88250_stable_88250-x86_64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acme_lsp-aarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acme_lsp-loongarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acme_lsp-riscv64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acme_lsp-x86_64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acmefocused-aarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acmefocused-loongarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acmefocused-riscv64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_acmefocused-x86_64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_l-aarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_l-loongarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_l-riscv64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_l-x86_64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_lone-aarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_lone-loongarch64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_lone-riscv64-Linux.json  ghcr_io_pkgforge_go_acme_lsp_stable_lone-x86_64-Linux.json  ghcr_io_pkgforge_go_adh_rules_stable_adh_rules-aarch64-Linux.json  ghcr_io_pkgforge_go_adh_rules_stable_adh_rules-loongarch64-Linux.json  ghcr_io_pkgforge_go_adh_rules_stable_adh_rules-riscv64-Linux.json  ghcr_io_pkgforge_go_adh_rules_stable_adh_rules-x86_64-Linux.json  ghcr_io_pkgforge_go_anew_stable_anew-x86_64-Linux.json  ghcr_io_pkgforge_go_anew_tomnomnom_anew_anew-aarch64-Linux.json  ghcr_io_pkgforge_go_anew_tomnomnom_anew_anew-loongarch64-Linux.json  ghcr_io_pkgforge_go_anew_tomnomnom_anew_anew-riscv64-Linux.json  ghcr_io_pkgforge_go_anew_tomnomnom_anew_anew-x86_64-Linux.json  ghcr_io_pkgforge_go_blocky_0xerr0r_blocky_blocky-aarch64-Linux.json  ghcr_io_pkgforge_go_blocky_stable_blocky-aarch64-Linux.json  ghcr_io_pkgforge_go_blocky_stable_blocky-loongarch64-Linux.json  ghcr_io_pkgforge_go_blocky_stable_blocky-riscv64-Linux.json  ghcr_io_pkgforge_go_blocky_stable_blocky-x86_64-Linux.json  ghcr_io_pkgforge_go_chimera_install_stable_chimera_install-x86_64-Linux.json  ghcr_io_pkgforge_go_chimera_install_stable_src-aarch64-Linux.json  (+2041 more)
tools/filter-urls/: Cargo.toml  README.md
tools/filter-urls/src/: main.rs
tools/go-detector/: Cargo.toml  README.md  main.go
tools/go-detector/src/: main.rs
tools/go-enricher/: Cargo.toml  README.md
tools/go-enricher/src/: main.rs
tools/go-indexer/: Cargo.toml  README.md
tools/go-indexer/src/: main.rs
(+137204 files in other folders)
