[package]
name = "go-enricher"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Azathothas@pkgforge.dev", "QaidVoid@pkgforge.dev"]
description = "Enrich Go Index Data"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.18"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
url = "2.5"
urlencoding = "2.1"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
strip = true