[package]
name = "go-indexer"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Azathothas@pkgforge.dev", "QaidVoid@pkgforge.dev"]
description = "Go index fetcher from index.golang.org"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "color"] }
indicatif = { version = "0.18", features = ["tokio"] }
indexmap = { version = "2.0", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12", features = ["gzip", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3
panic = "abort"
strip = true